# forge-e2e-r

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.asimov/: project.yaml  roadmap.yaml  warmup.json
.cargo-husky/hooks/: pre-commit
src/: cli_runner.rs  lib.rs  main.rs  r_validator.rs  stats.rs  types.rs
tests/analytics/: bayesian.yaml  bootstrap.yaml  breakeven.yaml  decision_trees.yaml  monte_carlo.yaml  real_options.yaml  scenarios.yaml  sensitivity.yaml  tornado.yaml  variance.yaml
validators/r/: README.md  bayesian_validator.R  bootstrap_validator.R  date_validator.R  decision_tree_validator.R  distribution_validator.R  financial_validator.R  install_deps.R  math_validator.R  monte_carlo_validator.R  real_options_validator.R  run_all.sh  sensitivity_validator.R  tornado_validator.R
