[package]
name = "mollendorff-forge-e2e-r"
version = "1.0.1"
edition = "2021"
authors = ["Möllendorff Group Inc. <admin@mollendorff.ai>"]
description = "E2E validation of forge analytics against R"
repository = "https://github.com/mollendorff-ai/forge-e2e-r"
license = "Elastic-2.0"
keywords = ["forge", "e2e", "testing", "r", "analytics"]
categories = ["development-tools::testing"]
readme = "README.md"

[lib]
name = "forge_e2e_r"
path = "src/lib.rs"

[[bin]]
name = "forge-e2e-r"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# Colored output
colored = "3.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Temp files
tempfile = "3.15"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
pretty_assertions = "1.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
